# uni-kb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
specs/: generators-mcp.yaml  nodejs-parser.yaml  parser-system.yaml  storage-layer.yaml
src/uni_kb/: cli.py  mcp_server.py
src/uni_kb/generators/: __init__.py  api_contract.py  auth_matrix.py  business_logic.py  config_catalog.py  data_model.py  migration_checklist.py
src/uni_kb/parsers/: __init__.py  base.py  registry.py
src/uni_kb/parsers/java/: __init__.py  controller.py  entity.py  mapper.py  service.py
src/uni_kb/parsers/nodejs/: __init__.py  middleware.py  model.py  route.py  service.py
src/uni_kb/store/: __init__.py  chroma_indexes.py  code_graph.py  sqlite_store.py
tests/: conftest.py  test_api_contract.py  test_auth_matrix.py  test_base.py  test_business_logic.py  test_chroma_indexes.py  test_code_graph.py  test_config_catalog.py  test_data_model.py  test_java_controller.py  test_java_entity.py  test_java_mapper.py  test_java_service.py  test_migration_checklist.py  test_nodejs_chroma.py  test_nodejs_middleware.py  test_nodejs_middleware_permissions.py  test_nodejs_model.py  test_nodejs_route.py  test_nodejs_service.py  test_registry.py  test_sqlite_store.py
tests/acceptance/: test_petclinic_parsing.py
tests/integration/: test_parser_to_store.py  test_store_to_generator.py
